<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_host_keys"
        android:title="@string/host_keys_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_learning"
        android:title="@string/learning_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_settings"
        android:title="@string/settings_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_settings"
        android:title="@string/settings_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_licenses"
        android:title="@string/licenses_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_repository"
        android:title="@string/open_repository_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_diag_dump"
        android:title="@string/diag_dump_title"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logcat"
        android:title="@string/logcat_title"
        android:visible="false"
        app:showAsAction="never" />
</menu>
